--- a/configure.ac
+++ b/configure.ac
@@ -4,24 +4,24 @@
   
 #     Copyright (C) 2003, 2005  Dale Mellor
 #   
-#     This program is free software; you can redistribute it and/or modify
-#     it under the terms of the GNU General Public License as published by
-#     the Free Software Foundation; either version 2, or (at your option)
-#     any later version.
-#   
-#     This program is distributed in the hope that it will be useful,
-#     but WITHOUT ANY WARRANTY; without even the implied warranty of
-#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#     GNU General Public License for more details.
-#   
-#     You should have received a copy of the GNU General Public License
-#     along with this program; if not, write to the Free Software
-#     Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
-#     USA.
+#    This file is part of GNU mcron.
+# 
+#    GNU mcron is free software: you can redistribute it and/or modify it under
+#    the terms of the GNU General Public License as published by the Free
+#    Software Foundation, either version 3 of the License, or (at your option)
+#    any later version.
+# 
+#    GNU mcron is distributed in the hope that it will be useful, but WITHOUT
+#    ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+#    FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
+#    more details.
+# 
+#    You should have received a copy of the GNU General Public License along
+#    with GNU mcron.  If not, see <http://www.gnu.org/licenses/>.
 
 
-AC_PREREQ(2.59)
-AC_INIT([mcron], [1.0.3], [dale_mellor@users.sourceforge.net])
+AC_PREREQ(2.61)
+AC_INIT([mcron], [1.0.4], [dale_mellor@users.sourceforge.net])
 AM_INIT_AUTOMAKE
 
 
